tests/snapshots/snapshot_receipts__receipt_canonical_json_full_key_ordering.snap
---
source: tests/snapshot_receipts.rs
expression: canon
---
{"artifacts":[{"kind":"file","path":"src/lib.rs"},{"kind":"patch","path":"changes.patch"}],"backend":{"adapter_version":"0.2.1","backend_version":"3.5.0","id":"sidecar:claude"},"capabilities":{"code_execution":"unsupported","extended_thinking":"emulated","mcp_client":{"restricted":{"reason":"requires explicit opt-in"}},"streaming":"native","tool_read":"native","tool_use":"native","tool_write":"native"},"meta":{"contract_version":"abp/v0.1","duration_ms":300000,"finished_at":"2025-01-15T12:05:00Z","run_id":"00000000-0000-4000-8000-000000000001","started_at":"2025-01-15T12:00:00Z","work_order_id":"00000000-0000-4000-8000-000000000002"},"mode":"mapped","outcome":"complete","receipt_sha256":null,"trace":[{"message":"Initializing agent run","ts":"2025-01-15T12:00:00Z","type":"run_started"},{"input":{"path":"src/lib.rs"},"parent_tool_use_id":null,"tool_name":"read_file","tool_use_id":"tu_001","ts":"2025-01-15T12:00:00Z","type":"tool_call"},{"is_error":false,"output":"fn main() {}","tool_name":"read_file","tool_use_id":"tu_001","ts":"2025-01-15T12:00:00Z","type":"tool_result"},{"path":"src/lib.rs","summary":"added new function","ts":"2025-01-15T12:05:00Z","type":"file_changed"},{"message":"Task completed successfully","ts":"2025-01-15T12:05:00Z","type":"run_completed"}],"usage":{"cache_read_tokens":50,"cache_write_tokens":200,"estimated_cost_usd":0.042,"input_tokens":1500,"output_tokens":3200,"request_units":null},"usage_raw":{"cache_creation_input_tokens":200,"cache_read_input_tokens":50,"input_tokens":1500,"output_tokens":3200},"verification":{"git_diff":"diff --git a/src/lib.rs b/src/lib.rs\n--- a/src/lib.rs\n+++ b/src/lib.rs\n@@ -1 +1,2 @@\n fn main() {}\n+fn helper() {}","git_status":"M src/lib.rs","harness_ok":true}}
